main-test/NetworkPolicyOverLap/allow_test2_pool1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overwrite
  namespace: test1
spec:
  podSelector: {}
  ingress:
    - from: 
      - namespaceSelector:
          matchLabels:
            name: test1
      - ipBlock:
          cidr: 10.0.1.0/28
  policyTypes:
  - Ingress
# apiVersion: projectcalico.org/v3
