main-test/NetworkPolicyOverLap/allow_test2_to_test1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overwrite
  namespace: test1
spec:
  podSelector: {}
  ingress:
    - from: 
      - namespaceSelector:
          matchLabels:
            name: test1
      - namespaceSelector:
          matchLabels:
            name: test2
  policyTypes:
  - ingress
