main-test/NetworkPolicyOverLap/overwrite_that.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overwrite
  namespace: test1
spec:
  podSelector: {}
  ingress:
    - to: 
      - namespaceSelector:
          matchLabels:
            name: test1
      - namespaceSelector:
          matchLabels:
            name: test2
  policyTypes:
  - Ingress
